tests/fixtures/positive/structure/PreferSwitchOverIfElseChains_ORMin3.cls
public class Example {
    public void method(String x) {
        if (x == 'a' || x == 'b') {
        }
    }
}

