tests/fixtures/negative/structure/PreferSwitchOverIfElseChains_ConsecutiveIfMin5.cls
public class Example {
    public void method(String x) {
        if (x == 'a') {
        }
        if (x == 'b') {
        }
        if (x == 'c') {
        }
        if (x == 'd') {
        }
        if (x == 'e') {
        }
    }
}

